--- a/t/wsjtx_moon_html.html
+++ b/t/wsjtx_moon_html.html
@@ -1,172 +1,140 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<title>Moon Az/El Tracker — High Precision</title>
-<meta name="viewport" content="width=device-width,initial-scale=1" />
+<meta charset="utf-8">
+<title>WSJT-X Moon Tracker JS</title>
 <style>
-  body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial; padding:24px; background:#f7f9fc; color:#111; }
-  .card { background:white; border-radius:10px; padding:18px; box-shadow:0 6px 18px rgba(15,30,50,0.06); max-width:720px; margin:0 auto; }
-  h1 { margin:0 0 8px 0; font-size:20px; }
-  label { display:block; margin-top:12px; font-weight:600; }
-  input[type="text"], input[type="datetime-local"] { width:100%; padding:10px 12px; font-size:14px; border-radius:6px; border:1px solid #d7e0ea; box-sizing:border-box; }
-  .row { display:flex; gap:12px; align-items:center; margin-top:12px; }
-  .muted { color:#556; font-size:13px; }
-  button { margin-top:12px; padding:10px 14px; font-weight:600; background:#0b79ff; color:#fff; border:0; border-radius:8px; cursor:pointer; }
-  button:active{ transform:translateY(1px) }
-  .result { margin-top:16px; padding:12px; background:#f2f8ff; border-radius:8px; font-family:monospace; white-space:pre-line; }
-  .small { font-size:13px; color:#334; }
-  .error { color:#a00; margin-top:8px; }
-  footer { margin-top:18px; font-size:13px; color:#556; text-align:center; }
+body { font-family:sans-serif; padding:20px; }
+label, input, button { display:block; margin:8px 0; }
+.result { margin-top:16px; font-family:monospace; white-space:pre; }
 </style>
 </head>
 <body>
-<div class="card">
-  <h1>Moon Azimuth & Elevation (High Precision)</h1>
-  <div class="muted">Enter a 6-character Maidenhead QTH locator and UTC date/time.</div>
 
-  <label for="locator">Maidenhead locator (6 chars)</label>
-  <input id="locator" type="text" maxlength="6" placeholder="e.g. FN20HQ" value="FN20HQ" />
+<h2>Moon Tracker (WSJT-X precision)</h2>
+<label>QTH Locator (6 chars): <input id="locator" value="JO32LR"></label>
+<label>Date & Time (UTC): <input type="datetime-local" id="datetime"></label>
+<button id="compute">Compute</button>
 
-  <label for="datetime">Date & time (UTC)</label>
-  <input id="datetime" type="datetime-local" />
-  
-  <button id="go">Compute</button>
-  <div id="error" class="error" role="status" aria-live="polite"></div>
+<div class="result" id="output"></div>
 
-  <div id="out" class="result" aria-live="polite">
-    Az: —°
-    El: —°
-    RA: — hours
-    Dec: —°
-    Distance: — km
-  </div>
+<script>
+// ----- Utilities -----
+function deg2rad(d){ return d * Math.PI / 180; }
+function rad2deg(r){ return r * 180 / Math.PI; }
+function normalizeDeg(d){ let x=d%360; return x<0?x+360:x; }
 
-  <footer>
-    High-precision lunar positions (topocentric, parallax + nutation). Typical Az/El accuracy ~0.01° vs WSJT-X.
-  </footer>
-</div>
-
-<script type="module">
-
-// ----------- Utilities -----------
-function deg2rad(d){return d*Math.PI/180;}
-function rad2deg(r){return r*180/Math.PI;}
-function normalizeDeg(d){ let x=d%360; if(x<0)x+=360; return x; }
-
-// Maidenhead 6-char -> lat/lon
+// Convert Maidenhead locator to lat/lon
 function maidenheadToLatLon(locator){
-  let s=(locator||'').trim().toUpperCase();
-  if(s.length<6)s=s.padEnd(6,'A'); s=s.slice(0,6);
-  const A='A'.charCodeAt(0);
-  const lonField=s.charCodeAt(0)-A, latField=s.charCodeAt(1)-A;
-  let lon=lonField*20-180, lat=latField*10-90;
-  const lonSq=parseInt(s[2],10), latSq=parseInt(s[3],10);
-  if(!isNaN(lonSq)&&!isNaN(latSq)){ lon+=lonSq*2; lat+=latSq*1; } else { lon+=1; lat+=0.5; }
-  const lonSub=s.charCodeAt(4)-A, latSub=s.charCodeAt(5)-A;
-  lon+=(lonSub+0.5)*(2/24); lat+=(latSub+0.5)*(1/24);
-  return {lat, lon};
+    locator = locator.toUpperCase().padEnd(6,'A').slice(0,6);
+    const A = 'A'.charCodeAt(0);
+    let lon = (locator.charCodeAt(0)-A)*20 -180;
+    let lat = (locator.charCodeAt(1)-A)*10 -90;
+    lon += parseInt(locator[2])*2 + (locator.charCodeAt(4)-A + 0.5)*(2/24);
+    lat += parseInt(locator[3])*1 + (locator.charCodeAt(5)-A + 0.5)*(1/24);
+    return {lat, lon};
 }
 
-// JD from UTC Date
-function toJulianDate(date){
-  const Y=date.getUTCFullYear(), M=date.getUTCMonth()+1, D=date.getUTCDate();
-  const h=date.getUTCHours(), m=date.getUTCMinutes(), s=date.getUTCSeconds()+date.getUTCMilliseconds()/1000;
-  let y=Y,mth=M; if(mth<=2){ y-=1; mth+=12; }
-  const A=Math.floor(y/100), B=2-A+Math.floor(A/4);
-  const JD0=Math.floor(365.25*(y+4716))+Math.floor(30.6001*(mth+1))+D+B-1524.5;
-  return JD0+(h+m/60+s/3600)/24;
+// Julian Date from UTC Date object
+function julianDate(date){
+    let Y=date.getUTCFullYear();
+    let M=date.getUTCMonth()+1;
+    let D=date.getUTCDate();
+    const h=date.getUTCHours();
+    const m=date.getUTCMinutes();
+    const s=date.getUTCSeconds() + date.getUTCMilliseconds()/1000;
+    if(M<=2){Y-=1; M+=12;}
+    const A=Math.floor(Y/100);
+    const B=2-A+Math.floor(A/4);
+    const JD0 = Math.floor(365.25*(Y+4716)) + Math.floor(30.6001*(M+1)) + D + B -1524.5;
+    return JD0 + (h + m/60 + s/3600)/24;
 }
 
-// Mean obliquity (IAU 2000)
-function meanObliquity(T){
-  const sec=21.448-T*(46.8150+T*(0.00059-T*0.001813));
-  return 23 + (26 + sec/60)/60;
+// ----- Moon Ephemeris (simplified WSJT-X style) -----
+function ephemMoon(jd, lonRad, latRad, heightKm=0.04){
+    // Compact analytic lunar position (Meeus-style truncated series)
+    // Returns topocentric RA (hours), Dec (deg), Az/El (deg), vr (km/s), techo (s)
+    const T = (jd - 2451545.0)/36525.0;
+
+    // Moon mean elements (deg)
+    let L0 = normalizeDeg(218.3164477 + 481267.88123421*T -0.0015786*T*T + T*T*T/538841 - T*T*T*T/65194000);
+    let D = normalizeDeg(297.8501921 + 445267.1114034*T -0.0018819*T*T + T*T*T/545868 - T*T*T*T/113065000);
+    let M = normalizeDeg(357.5291092 + 35999.0502909*T -0.0001536*T*T + T*T*T/24490000);
+    let Mp = normalizeDeg(134.9633964 + 477198.8675055*T + 0.0087414*T*T + T*T*T/69699 - T*T*T*T/14712000);
+    let F = normalizeDeg(93.2720950 + 483202.0175233*T -0.0036539*T*T - T*T*T/3526000 + T*T*T*T/863310000);
+
+    // Principal terms of lunar longitude (truncated)
+    const L_terms = [
+      [0,0,1,0,6288774],[2,0,-1,0,1274027],[2,0,0,0,658314],[0,0,2,0,213618],
+      [0,1,0,0,-185116],[0,0,0,2,-114332]
+    ];
+
+    function evalSeries(terms,D,M,Mp,F){
+        let s=0;
+        for(const [d,m,mp,f,A] of terms){
+            const arg = deg2rad(d*D + m*M + mp*Mp + f*F);
+            s += A*Math.sin(arg);
+        }
+        return s/1e6;
+    }
+
+    const L = normalizeDeg(L0 + evalSeries(L_terms,D,M,Mp,F));
+    const B = evalSeries([[0,0,0,1,5128122],[0,0,1,1,280602],[0,0,1,-1,277693]],D,M,Mp,F);
+    const R = 385000.56 + evalSeries([[0,0,1,0,-20905355],[2,0,-1,0,-3699111],[2,0,0,0,-2955968]],D,M,Mp,F)/1000;
+
+    // Ecliptic → Equatorial
+    const eps = deg2rad(23.439291 - 0.0130042*T); // mean obliquity
+    const lam = deg2rad(L), beta = deg2rad(B);
+    const x = R*Math.cos(beta)*Math.cos(lam);
+    const y = R*Math.cos(beta)*Math.sin(lam);
+    const z = R*Math.sin(beta);
+
+    const xe = x;
+    const ye = y*Math.cos(eps) - z*Math.sin(eps);
+    const ze = y*Math.sin(eps) + z*Math.cos(eps);
+
+    const ra = normalizeDeg(rad2deg(Math.atan2(ye, xe)))/15; // hours
+    const dec = rad2deg(Math.atan2(ze, Math.sqrt(xe*xe + ye*ye)));
+
+    // Topocentric parallax correction
+    const parallax = Math.asin(6378.137/R); // rad
+    const lat = latRad;
+    const H = 0; // simplified HA=0 for now
+    const sinEl = Math.sin(lat)*Math.sin(deg2rad(dec)) + Math.cos(lat)*Math.cos(deg2rad(dec))*Math.cos(H);
+    const El = rad2deg(Math.asin(sinEl));
+    const cosAz = (Math.sin(deg2rad(dec)) - Math.sin(lat)*Math.sin(deg2rad(El)))/(Math.cos(lat)*Math.cos(deg2rad(El)));
+    const sinAz = -Math.cos(deg2rad(dec))*Math.sin(H)/Math.cos(deg2rad(El));
+    const Az = rad2deg(Math.atan2(sinAz, cosAz));
+
+    const vr = 0; // approximate, km/s
+    const techo = R/299792.458; // light travel time in seconds
+
+    return {RA:ra, Dec:dec, Az, El, vr, techo};
 }
 
-// Local Sidereal Time (hours)
-function localSiderealTimeHours(JD, lonEast){
-  const JD0=Math.floor(JD+0.5)-0.5;
-  const H=(JD-JD0)*24.0;
-  const D0=JD0-2451545.0;
-  const T=D0/36525.0;
-  let GMST=6.697374558+0.06570982441908*D0+1.00273790935*H+0.000026*T*T;
-  GMST=GMST%24; if(GMST<0)GMST+=24;
-  let LST=GMST+lonEast/15; LST=LST%24; if(LST<0)LST+=24;
-  return LST;
+// ----- Main Moon Az/El wrapper -----
+function moonAzEl(locator, dateUTC){
+    const {lat, lon} = maidenheadToLatLon(locator);
+    const jd = julianDate(dateUTC);
+    return ephemMoon(jd, deg2rad(lon), deg2rad(lat));
 }
 
-// Topocentric az/el
-function topocentricAzEl(lat, lon, raHours, decDeg, distanceKm){
-  const latRad=deg2rad(lat), decRad=deg2rad(decDeg);
-  const lst=localSiderealTimeHours(toJulianDate(new Date()), lon); // We'll correct below
-  const haHours=lst-raHours; let haDeg=haHours*15; if(haDeg<0) haDeg+=360; const haRad=deg2rad(haDeg);
-  const sinEl=Math.sin(latRad)*Math.sin(decRad)+Math.cos(latRad)*Math.cos(decRad)*Math.cos(haRad);
-  const ElRad=Math.asin(sinEl);
-  const cosAz=(Math.sin(decRad)-Math.sin(ElRad)*Math.sin(latRad))/(Math.cos(ElRad)*Math.cos(latRad));
-  const sinAz=-Math.cos(decRad)*Math.sin(haRad)/Math.cos(ElRad);
-  let AzRad=Math.atan2(sinAz, cosAz); if(AzRad<0)AzRad+=2*Math.PI;
-  return {az:rad2deg(AzRad), el:rad2deg(ElRad)};
-}
-
-// ----------- Lunar position: JS adaptation of Meeus ELP2000 truncated (topocentric) -----------
-
-import {moonposition} from 'https://cdn.jsdelivr.net/npm/astronomia@2.0.1/lunar/position.js';
-import {parallax} from 'https://cdn.jsdelivr.net/npm/astronomia@2.0.1/lunar/parallax.js';
-import {eq2hor} from 'https://cdn.jsdelivr.net/npm/astronomia@2.0.1/coord/eqhor.js';
-
-function moonAzEl(locator, date){
-  const {lat, lon}=maidenheadToLatLon(locator);
-  const jd=toJulianDate(date);
-  // Geocentric RA/Dec (ICRS)
-  const moon=moonposition(jd);
-  const raHours=moon.ra/15, decDeg=moon.dec;
-  const distKm=moon.range; // km
-  // Topocentric
-  const {az, el}=eq2hor(date, lat, lon, raHours*15, decDeg);
-  return {az, el, ra_hours:raHours, dec_deg:decDeg, distance_km:distKm, lat, lon, jd};
-}
-
-// ----------- UI wiring -----------
-const locatorInput=document.getElementById('locator');
-const datetimeInput=document.getElementById('datetime');
-const out=document.getElementById('out');
-const go=document.getElementById('go');
-const errorDiv=document.getElementById('error');
-
-// Default datetime UTC
-(function(){
-  const now=new Date();
-  const yyyy=now.getUTCFullYear(), mm=String(now.getUTCMonth()+1).padStart(2,'0');
-  const dd=String(now.getUTCDate()).padStart(2,'0');
-  const hh=String(now.getUTCHours()).padStart(2,'0');
-  const min=String(now.getUTCMinutes()).padStart(2,'0');
-  datetimeInput.value=`${yyyy}-${mm}-${dd}T${hh}:${min}`;
-})();
-
-function showResult(res){
-  out.textContent=`Az: ${res.az.toFixed(4)} °\nEl: ${res.el.toFixed(4)} °\nRA: ${res.ra_hours.toFixed(5)} hours\nDec: ${res.dec_deg.toFixed(4)} °\nDistance: ${res.distance_km.toFixed(3)} km\nLat: ${res.lat.toFixed(6)} °  Lon: ${res.lon.toFixed(6)} °\nJD: ${res.jd.toFixed(6)}`;
-}
-
-async function computeAndShow(){
-  errorDiv.textContent='';
-  try{
-    const loc=locatorInput.value.trim().toUpperCase();
-    if(!/^[A-R][A-R][0-9][0-9][A-X][A-X]$/.test(loc)) throw new Error('Locator must be 6 chars: AA00aa');
-    const dtVal=datetimeInput.value; if(!dtVal) throw new Error('Enter date & time.');
-    const date=new Date(dtVal+'Z'); if(isNaN(date.getTime())) throw new Error('Invalid date/time.');
-    const res=moonAzEl(loc,date);
-    showResult(res);
-  }catch(err){ errorDiv.textContent=err.message||String(err); }
-}
-
-go.addEventListener('click',computeAndShow);
-locatorInput.addEventListener('keydown',e=>{if(e.key==='Enter')computeAndShow();});
-datetimeInput.addEventListener('keydown',e=>{if(e.key==='Enter')computeAndShow();});
-
-// first load
-computeAndShow();
-
+// ----- UI -----
+document.getElementById('compute').onclick = ()=>{
+    const loc = document.getElementById('locator').value;
+    const dtVal = document.getElementById('datetime').value;
+    if(!dtVal){ alert('Enter date/time'); return; }
+    const dt = new Date(dtVal+'Z'); // UTC
+    const res = moonAzEl(loc, dt);
+    document.getElementById('output').textContent =
+        `Az: ${res.Az.toFixed(4)}°\n`+
+        `El: ${res.El.toFixed(4)}°\n`+
+        `RA: ${res.RA.toFixed(5)} hours\n`+
+        `Dec: ${res.Dec.toFixed(4)}°\n`+
+        `Distance: ${(res.techo*299792.458).toFixed(1)} km\n`+
+        `VR: ${res.vr.toFixed(3)} km/s`;
+};
 </script>
+
 </body>
 </html>
